# SigLIP-as-server

./: README.md
Desktop/clips-as-server/clip-service/: README.md  README_benchmarks.md  caption_results.json  llava_perf_stats.json  llava_reasoning.json  llava_reasoning.pkl  llava_reasoning.txt  main.py  mock_llava_results.json  perf_metrics.py  pyproject.toml  requirements-test.txt  requirements.txt
Desktop/clips-as-server/clip-service/api/: app.py
Desktop/clips-as-server/clip-service/batching/: README.md  benchmark.py  dynamic_batch_sizer.py  dynamic_batcher.py  example.py
Desktop/clips-as-server/clip-service/caching/: redis_cache.py
Desktop/clips-as-server/clip-service/config/: README.md  __init__.py  clip_config.json  clip_config.yaml  config.py  config.yaml  default_config.yaml  example.json  example.yaml  example_config.json  gcp_config.yaml  loader.py  sample_config.json  sample_config.yaml  schema.py  test_config.py  validate.py  validator.py
Desktop/clips-as-server/clip-service/indexing/: faiss_index.py
Desktop/clips-as-server/clip-service/inference/: collate_fn.py  pipeline.py
Desktop/clips-as-server/clip-service/input/: 1.md  dataset_config.py  download_images.py
Desktop/clips-as-server/clip-service/k8s/: deployment.yaml
Desktop/clips-as-server/clip-service/memory/: memory_graph.py
Desktop/clips-as-server/clip-service/model/: advanced_siglip.py  llava_model.py  loader.py  manager.py  registry.py  sequential_model.py  siglip_model.py
Desktop/clips-as-server/clip-service/monitoring/: batch_monitor.py  dynamic_batch_integration.py
Desktop/clips-as-server/clip-service/optimization/: try.py
Desktop/clips-as-server/clip-service/optimized_comparison_results/: comparison_metrics.csv
Desktop/clips-as-server/clip-service/scripts/: README.md  agent_commands.py  all_image_metadata.pkl  llava_result_visualization_result.py  llava_utils.py  mock_llava.py  report.txt  run_llava_batch.py  run_llava_memory.py  run_visualization.sh  test_llava.py  (+6 more)
(+114 files in other folders)
